# Books_Scraper

./: README.md  README.md.txt  pyproject.toml
books_scraper/: JeongSangChoi_CrawlingTest.xlsx  items.py  log.txt  pipelines.py  settings.py
books_scraper/spiders/: books.py
