[project]
name = "books-scraper"
version = "0.1.0"
description = "Crawling-Test"
authors = [
    {name = "choi",email = "gg78700@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pymongo (>=4.10.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
